# xor

./: .gitignore  CROSS_COMPILE.md  Cargo.toml  FIRST_PUBLISH_GUIDE.md  FIRST_RELEASE_CHECKLIST.md  HOW_TO_RELEASE.md  NPM_PUBLISHING.md  NPM_QUICK_START.md  NPM_SETUP_SUMMARY.md  PERFORMANCE.md  PROJECT_OVERVIEW.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
package/npm/: .npmignore  PUBLISHING.md  README.md  index.js  package.json
package/npm/platform-packages/darwin-arm64/: README.md  package.json
package/npm/platform-packages/darwin-x64/: README.md  package.json
package/npm/platform-packages/linux-arm64/: README.md  package.json
package/npm/platform-packages/linux-x64/: README.md  package.json
package/npm/platform-packages/win32-arm64/: README.md  package.json
package/npm/platform-packages/win32-x64/: README.md  package.json
package/npm/scripts/: first-publish.js  postinstall.js  prepare-packages.js  publish.sh  test-local.js  validate.js
scripts/: cleanup-releases.ps1  cleanup-releases.py  cleanup-releases.sh  test-version-update.py
src/: db.rs  main.rs
tests/: db_tests.rs  main_tests.rs
